--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 opencl evolved images, features that'd be nice:
 
+any features at all (decided on c++ implementation)
 screensaver mode
 gif to multiple evolved images
