--- a/todo
+++ b/todo
@@ -7,6 +7,7 @@ Features:
 
 Algorithmstuff:
 -split bigger images in smaller (e.g. 100x100px) subimages and evolve them in forked processes/threads.
+(Is this the right way to do this? Why not try lots of times in parallel with random differences? This would avoid gaps between subimages)
 -refine color palette (but allow deviations with some kind of acceptance)
 
 Implementation:
