--- a/todo
+++ b/todo
@@ -14,3 +14,27 @@ Implementation:
 -C++
 -UI maybe in C# or with QT
 -platform agnostic would be nice
+
+
+int drawshape()
+{
+	//user draws shape from ui
+
+    //start drawing shape vertex by vertex
+    //until max number of vertices reached or user closes polygon by clicking on initial vertex
+
+    //check if drawn shape gives a better fitness
+
+    //if it does update the leaderDNA
+}
+
+int dragvertex()
+{
+	//user drags vertex from ui
+
+    //user stops dragging vertex
+
+    //check if dragged vertex improves fitness
+
+    //if it does update the leaderDNA
+}
